--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -5,18 +5,23 @@
 
 [[main]]
   name = "Início"
-  url = "#"
+  url = "#hero"
   weight = 10
 
 [[main]]
   name = "Aplicações"
-  url = "#apps"
+  url = "#projects"
   weight = 20
+  
+[[main]]
+  name = "Colabore"
+  url = "#colaborate"
+  weight = 30
   
 [[main]]
   name = "Contato"
   url = "#contact"
-  weight = 30
+  weight = 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
