--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -15,7 +15,7 @@ day_night = true
 font = "classic"
 
 # Description for social sharing and search engines. If undefined, superuser role is used in place.
-description = "Aplicações Shiny - DE/UFPB"
+description = "Página com aplicações interativas desenvolvidas por professores, alunos e colaboradores do Departamento de Estatística da UFPB"
 
 # Default image for social sharing and search engines. Place image in `static/img/` folder and specify image name here.
 sharing_image = ""
