--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-title: Aplicações Shiny - DE/UFPB
+title: Shiny@DE
 baseURL: http://shiny.de.ufpb.br
 copyright: Copyright &copy; {year} [Departamento de Estatística/UFPB](https://ufpb.br/de)
 googleAnalytics: ''
